# stoX

./: .env.example  .gitignore  PIPELINE_STATUS.md  README.md  build_market.py  build_prices.py  build_validation.py  pyproject.toml  train_model.py
backend/: .env.example  .gitignore  01_project_scope_1.md  CLAUDE.md  README.md  SPEC.md  main.py  requirements.txt
backend/app/: config.py
backend/app/db/: database.py  schema.sql  seed.py
backend/app/models/: news.py  portfolio.py  stocks.py
backend/app/routers/: market.py  news.py  portfolio.py  stocks.py
backend/app/services/: news_service.py  portfolio_service.py  prediction_service.py  price_service.py  stock_info_service.py
backend/tests/: conftest.py  test_market.py  test_news.py  test_portfolio.py  test_stocks.py
configs/: pipeline.yaml
data/cleaned/: .gitignore  market_context.parquet.dvc
data/features/: data_dictionary.md  feature_stats.parquet.dvc  sl20_feature_panel.parquet.dvc
docs/: 00-project-overview.md  01-ml-data-pipeline.md  02-ml-model.md  03-frontend.md
frontend/: CLAUDE.md
frontend/app/: package-lock.json  package.json  tailwind.config.ts
ml/: .gitignore  PIPELINE_STATUS.md  README.md  SENTIMENT_PLAN.md  build_alignment.py  build_features.py  build_macro.py  colab_train.ipynb  eval_checkpoint.py  predict.py  pyproject.toml  requirements.txt  train_model.py
ml/configs/: pipeline.yaml
ml/tests/: test_features.py  test_model.py
models/tft_v1/: model_config.json
src/sl20_ml/model/: dataset.py  (+1 more)
tests/: test_alignment.py  test_cleaning.py  test_features.py  test_validation.py
(+52 files in other folders)
