[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sl20-ml"
version = "0.1.0"
description = "stoX — ML pipeline for S&P SL20 stock price prediction"
requires-python = ">=3.11"
dependencies = [
    # Data I/O
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    # Config
    "pyyaml>=6.0",
    # ML tooling
    "scikit-learn>=1.5",
    # Validation
    "pandera>=0.20",
    # Pipeline versioning
    "dvc>=3.50",
    # Experiment tracking
    "mlflow>=2.14",
    # Progress bars
    "tqdm>=4.66",
    # External data
    "fredapi>=0.5",
    "yfinance>=0.2",
    "feedparser>=6.0",
    # NLP / sentiment
    "transformers>=4.40",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sl20_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
